--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,34 @@
 [package]
 name = "mcp"
+description = "a library for making MCP compatible programs with rust"
 version = "0.1.0"
 edition = "2021"
+authors = ["Emil Lindfors <[email protected]>"]
+keywords = ["gen", "anthropic", "mcp protocol"]
+categories = ["API bindings"]
 
 [dependencies]
-mcp_gen = { git = "https://github.com/EmilLindfors/mcp_gen.git", branch = "main" }
+mcp_typegen = {path = "../mcp_gen"}
+async-trait = "0.1.83"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tokio = { version = "1.41.1", features = ["full"] }
+thiserror = "2.0.3"
+tracing = "0.1.40"
+tokio-util = "0.7.12"
+jsonrpc-core = "18.0.0"
+warp = "0.3.7"
+jsonrpc-derive = "18.0.0"
+futures = "0.3.31"
+uuid = { version = "1.11.0", features = ["v4"] }
+url = "2.5.4"
+base64 = "0.22.1"
+async-stream = "0.3.6"
+mime_guess = "2.0.5"
+tracing-subscriber = { version ="0.3.18", features = ["env-filter"]}
+config = "0.14.1"
+clap = { version = "4.5.21", features = ["derive"] }
+
+[[bin]]
+name = "server"
+path = "bin/server.rs"
