--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "mcp"
-description = "a library for making MCP compatible programs with rust"
+description = "a library for making MCP (Model Context Protocol) compatible programs with rust"
 version = "0.1.0"
 edition = "2021"
 authors = ["Emil Lindfors <[email protected]>"]
 keywords = ["gen", "anthropic", "mcp protocol"]
 categories = ["API bindings"]
+license = "MIT"
 
 [dependencies]
-mcp_typegen = {path = "../mcp_gen"}
 async-trait = "0.1.83"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
