--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Emil Lindfors <[email protected]>"]
 keywords = ["gen", "anthropic", "mcp_protocol", "mcp"]
-categories = ["API bindings"]
+categories = ["api-bindings"]
 license = "MIT"
 
 [dependencies]
