--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ config = "0.14.1"
 clap = { version = "4.5.21", features = ["derive"] }
 reqwest = { version = "0.12.9", features = ["json"]}
 reqwest-eventsource = "0.6.0"
+mime = "0.3.17"
+tracing-core = "0.1.33"
 
 [[bin]]
 name = "server"
