--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,10 +32,12 @@ reqwest = { version = "0.12.9", features = ["json"]}
 reqwest-eventsource = "0.6.0"
 mime = "0.3.17"
 tracing-core = "0.1.33"
+async-recursion = "1.1.1"
 
 [[bin]]
 name = "server"
 path = "bin/server.rs"
+
 
 [[bin]]
 name = "client"
